network interface is now delegated and can be mocked